# aapor-finetuning

./: .gitattributes  .gitignore  README.md  demo.ipynb  pyproject.toml
data/: 2016_anes_argyle.csv  json_task.xlsx
